--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "grunt-contrib-connect": "~0.2.0",
     "grunt-contrib-watch": "~0.4.3",
     "grunt-contrib-clean": "",
-    "grunt-contrib-compass":"~0.7.0",
+    "grunt-contrib-compass":"latest",
     "grunt-open": "~0.2.0",
     "grunt-express-server": "~0.4.5",
     "grunt-bower-task":"~0.3.4",
