--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
-    "name": "watchsteez",
-    "version": "0.0.1",
-    "dependencies": {
-        "jquery": "~1.10.2",
-        "bootstrap-sass-official": "latest"
-    },
-    "exportsOverride": {
-    }
+  "name": "watchsteez",
+  "version": "0.0.1",
+  "dependencies": {
+    "jquery": "~1.10.2",
+    "bootstrap-sass-official": "latest"
+  },
+  "exportsOverride": {},
+  "devDependencies": {
+    "imgCoverEffect": "~0.2.0"
+  }
 }
