--- a/package.json
+++ b/package.json
@@ -3,27 +3,22 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "bower": "~1.2.7",
-    "grunt-contrib-connect": "~0.2.0",
-    "grunt-contrib-watch": "~0.4.3",
-    "grunt-contrib-clean": "",
-    "grunt-contrib-compass":"latest",
-    "grunt-open": "~0.2.0",
-    "grunt-express-server": "~0.4.5",
-    "grunt-bower-task":"~0.3.4",
-    "grunt-execute": "~0.1.5",
-    "grunt-exec":"~0.4.2",
-    "grunt-bless":"~0.1.1",
-    "connect-livereload": "~0.1.3",
-    "swig": "~1.1.0",
-    "swig-extras":"~0.0.1",
+    "bower": "~1.3.12",
     "express": "~3.x",
-    "matchdep": "~0.3.0",
-    "ncp": "~0.4.2",
-    "rimraf": "~2.2.4",
+    "grunt": "~0.4.5",
+    "grunt-bower-task": "~0.4.0",
+    "grunt-contrib-clean": "*",
+    "grunt-contrib-compass": "*",
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-exec": "~0.4.6",
+    "grunt-express-server": "^0.4.19",
     "htmltidy": "0.0.6",
-    "http-sync":"latest"
+    "http-sync": "latest",
+    "matchdep": "~0.3.0",
+    "ncp": "~1.0.1",
+    "rimraf": "~2.2.8",
+    "swig": "^1.4.2",
+    "swig-extras": "^0.0.1"
   },
   "engines": {
     "node": ">=0.10.22"
