--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,5 @@
     "jquery": "~1.10.2",
     "bootstrap-sass-official": "latest"
   },
-  "exportsOverride": {},
-  "devDependencies": {
-    "imgCoverEffect": "~0.2.0"
-  }
+  "exportsOverride": {}
 }
