implemented about page with instagram feed.

--- a/file_config.json
+++ b/file_config.json
@@ -2,5 +2,9 @@
     {
         "page": "home",
         "title": "WatchSteez"
+    },
+    {
+        "page": "about",
+        "title": "About | WatchSteez"
     }    
 ]
